scalacommandargs2/target/test-classes/failure5.txt
/home/luca/workspace/scala-command/src/main/scala/code/lucamarrocco/scala/command/ScalaCommand.scala:4: error: expected start of definition
  override toString(): String = ""
           ^
one error found
